--- a/src/main/resources/static/styles.scss
+++ b/src/main/resources/static/styles.scss
@@ -1,14 +1,19 @@
 
-$brown: #757763;
+$black: #000000;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
 
 
 @use "bulma/sass" with (
+
   $family-primary: '"SUSE", sans-serif',
-  $primary: hsl(263, 100%,69%),
-  $link:hsl(192, 91%, 64%),
-  $control-border-width: 2px,
+  $primary: hsl(343, 77%,44%),
+  $link:hsl(103, 48%, 100%),
+
+  $body-background-color: #ffffff,
+  $body-color: $black,
+  $title-color: $black,
+
 );
 
 @import url("https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap'");
