--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         <h1 class="title">
             Willkommen zu unserem Projekt
         </h1>
-        <h2 class="subtitle has-text-danger">
+        <h2 class="title">
             Hier entsteht das Semesterprojekt :)
         </h2>
 
