--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -53,6 +53,7 @@
                   <div class="dropdown-menu" id="dropdown-menu-config" role="menu">
                       <div class="dropdown-content">
                           <a href="/features/config/network" class="dropdown-item has-text-black has-background-link">Netzwerk</a>
+                          <a href="/features/config/client" class="dropdown-item has-text-black has-background-link">Clients</a>
                           <a href="/features/config/server" class="dropdown-item has-text-black has-background-link">Sicherheit</a>
 
                       </div>
