--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="/main.js"></script>
 
 </head>
 <body>
@@ -24,7 +25,9 @@
             Hier entsteht das Semesterprojekt :)
         </h2>
 
-
+<div th:if="${session.network !=null}">
+    <div th:text="${session.network._id}">h</div>
+</div>
 
 </section>
 
