--- a/src/main/resources/static/styles.scss
+++ b/src/main/resources/static/styles.scss
@@ -1,19 +1,18 @@
-
-$black: #000000;
-$beige-light: #d0d1cd;
-$beige-lighter: #eff0eb;
-
-
 @use "bulma/sass" with (
 
   $family-primary: '"SUSE", sans-serif',
   $primary: hsl(343, 77%,44%),
   $link:hsl(103, 48%, 100%),
-  $body-background-color: #ffffff,
-  $body-color: $black,
-  $title-color: $black,
+  $body-background-color: #FFFFFF,
 
-  $dropdown-content-background-color: hsl(103, 48%, 100%)
+  $title-color: #000000,
+
+  $box-background-color: #EDEDED,
+  $box-color: #2B2B2B,
+  $box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3),
+
+  $menu-label-color: #000000,
+
 );
 
 @import url("https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap'");
