--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,23 +13,190 @@
 
     <div th:insert="~{fragments/header.html ::header }"></div>
 
+<div class="section">
+        <div class="columns">
 
+            <div th:insert="~{fragments/menu.html ::menu }"></div>
 
+            <main class="column">
+                <div class="level">
+                    <div class="level-left">
+                        <div class="level-item">
+                            <div class="title">Dashboard</div>
+                        </div>
+                    </div>
+                    <div class="level-right">
+                        <div class="level-item">
+                            <button type="button" class="button is-small">
+                                March 8, 2017 - April 6, 2017
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
-<section class="section">
+                <div class="columns is-multiline">
+                    <div class="column">
+                        <div class="box">
+                            <div class="heading">Top Seller Total</div>
+                            <div class="title">56,950</div>
+                            <div class="level">
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Sales $</div>
+                                        <div class="title is-5">250,000</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Overall $</div>
+                                        <div class="title is-5">750,000</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Sales %</div>
+                                        <div class="title is-5">25%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <h1 class="title">
-            Willkommen zu unserem Projekt
-        </h1>
-        <h2 class="title">
-            Hier entsteht das Semesterprojekt :)
-        </h2>
+                    <div class="column">
+                        <div class="box">
+                            <div class="heading">Revenue / Expenses</div>
+                            <div class="title">55% / 45%</div>
+                            <div class="level">
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Rev Prod $</div>
+                                        <div class="title is-5">30%</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Rev Serv $</div>
+                                        <div class="title is-5">25%</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Exp %</div>
+                                        <div class="title is-5">45%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="box">
+                            <div class="heading">Feedback Activity</div>
+                            <div class="title">78% &uarr;</div>
+                            <div class="level">
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Positive</div>
+                                        <div class="title is-5">1560</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Negative</div>
+                                        <div class="title is-5">368</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Pos/Neg %</div>
+                                        <div class="title is-5">77% / 23%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="box">
+                            <div class="heading">Orders / Returns</div>
+                            <div class="title">75% / 25%</div>
+                            <div class="level">
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Orders $</div>
+                                        <div class="title is-5">425,000</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Returns $</div>
+                                        <div class="title is-5">106,250</div>
+                                    </div>
+                                </div>
+                                <div class="level-item">
+                                    <div class="">
+                                        <div class="heading">Success %</div>
+                                        <div class="title is-5">+ 28,5%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<div th:if="${session.network !=null}">
-    <div th:text="${session.network._id}">h</div>
-</div>
-
-</section>
-
+                <div class="columns is-multiline">
+                    <div class="column is-6">
+                        <div class="panel">
+                            <p class="panel-heading">
+                                Expenses: Daily - $700
+                            </p>
+                            <div class="panel-block">
+                                <figure class="image is-16x9">
+                                    <img src="https://placehold.it/1280x720">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="panel">
+                            <p class="panel-heading">
+                                Refunds: Daily - $200
+                            </p>
+                            <div class="panel-block">
+                                <figure class="image is-16x9">
+                                    <img src="https://placehold.it/1280x720">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="panel">
+                            <p class="panel-heading">
+                                Something
+                            </p>
+                            <div class="panel-block">
+                                <figure class="image is-16x9">
+                                    <img src="https://placehold.it/1280x720">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-6">
+                        <div class="panel">
+                            <p class="panel-heading">
+                                Something Else
+                            </p>
+                            <div class="panel-block">
+                                <figure class="image is-16x9">
+                                    <img src="https://placehold.it/1280x720">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+    <!--<div th:if="${session.network !=null}">-->
+    <!--    <div th:text="${session.network._id}">h</div>-->
+    <!--</div>-->
 </body>
 </html>
