--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Index</title>
+  <title>Error</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="/main.js"></script>
+
 </head>
 <body>
 
 <div th:insert="~{fragments/header.html ::header }"></div>
+<div class="columns is-fullheight">
+  <div th:insert="~{fragments/menu.html ::menu }"></div>
+  <main class="column m-4">
 
 
+     <p class="title">Errorseite!</p>
+     <p class="subtitle">Irgendwas ist schief gelaufen!</p>
 
 
-<section class="section">
+  </main>
+</div>
 
-
-<h1 class="title has-text-danger">ERROR - Das hat leider nicht geklappt :/</h1>
-
-  <h2 class="title"> Das ist der Error Fallback für übersehenne Fehler...Bitte prüfen</h2>
-  <h2 class="title"> TODO: Bitte noch fehler  Ausgeben lassen!!</h2>
-</section>
-
+<!--<div th:if="${session.network !=null}">-->
+<!--    <div th:text="${session.network._id}">h</div>-->
+<!--</div>-->
 </body>
 </html>
