--- a/src/main/resources/templates/features/datastorage.html
+++ b/src/main/resources/templates/features/datastorage.html
@@ -12,16 +12,19 @@
 <body>
 
 <div th:insert="~{fragments/header.html ::header }"></div>
+<div class="columns is-fullheight">
+  <div th:insert="~{fragments/menu.html ::menu }"></div>
+  <main class="column m-4">
 
 
-<section class="section">
 
 
   <h1 class="title">Dateiverwaltung</h1>
 
 
 
-</section>
+  </main>
+  </div>
 
 </body>
 </html>
