--- a/src/main/resources/templates/features/live.html
+++ b/src/main/resources/templates/features/live.html
@@ -12,16 +12,19 @@
 <body>
 
 <div th:insert="~{fragments/header.html ::header }"></div>
-
-
-<section class="section">
-
-
-  <h1 class="title">Hier wird die Live Übertragung der Pis möglich sein</h1>
+<div class="columns is-fullheight">
+  <div th:insert="~{fragments/menu.html ::menu }"></div>
+  <main class="column m-4">
 
 
 
-</section>
+
+  <h1 class="title">Hier wird die Übertragung von Videos möglich sein</h1>
+
+
+
+  </main>
+</div>
 
 </body>
 </html>
