--- a/src/main/resources/templates/features/configuration.html
+++ b/src/main/resources/templates/features/configuration.html
@@ -12,11 +12,13 @@
 <body>
 
 <div th:insert="~{fragments/header.html ::header }"></div>
-
-<div class="container pt-3">
+<div class="columns is-fullheight">
+  <div th:insert="~{fragments/menu.html ::menu }"></div>
+  <main class="column m-4">
 
   <h1 class="title">Config</h1>
 
+  </main>
 </div>
 
 
