--- a/src/main/resources/templates/features/configuration/network.html
+++ b/src/main/resources/templates/features/configuration/network.html
@@ -11,9 +11,9 @@
 <body>
 
 <div th:insert="~{fragments/header.html ::header }"></div>
-
-
-<div class="container pt-3">
+<div class="columns is-fullheight">
+    <div th:insert="~{fragments/menu.html ::menu }"></div>
+    <main class="column m-4">
 
     <h2 class="title is-3"> Neues Netzwerk anlegen</h2>
     <h2 class="title is-3" th:text="${message}"></h2>
@@ -29,10 +29,9 @@
         <button class="button is-danger is-rounded pt-2" type="submit">Speichern</button>
     </form>
 
-
-
-
+    </main>
 </div>
+
 
 </body>
 </html>
