--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,57 +19,21 @@
                 <div class="navbar-item">
                     <div class="buttons">
                         <a class="button is-link is-rounded" href="/">
-              <span class="icon">
-                <i class="fas fa-home"></i>
-              </span>
+                        <span class="icon">
+                                <i class="fas fa-home"></i>
+                            </span>
                             <strong>Home</strong>
                         </a>
 
-                        <a class="button is-link is-rounded" href="/features/live">
-              <span class="icon">
-                <i class="fas fa-video"></i>
-              </span>
-                            <p>Live-Überwachung</p>
-                        </a>
-
-                        <a class="button is-link is-rounded" href="/features/dataStorage">
-              <span class="icon">
-                <i class="fas fa-database"></i>
-              </span>
-                            <p>Dateiverwaltung</p>
-                        </a>
-
-                        <div class="dropdown is-hoverable">
-                            <div class="dropdown-trigger">
-                                <button class="button is-link is-rounded" aria-haspopup="true" aria-controls="dropdown-menu-config">
-                  <span class="icon">
-                    <i class="fas fa-wrench"></i>
-                  </span>
-                                    <p>Konfiguration</p>
-                                    <span class="icon is-small">
-                    <i class="fas fa-angle-down" aria-hidden="true"></i>
-                  </span>
-                                </button>
-                            </div>
-                            <div class="dropdown-menu" id="dropdown-menu-config" role="menu">
-                                <div class="dropdown-content">
-                                    <a href="/features/config/network" class="dropdown-item has-text-black has-background-link">Netzwerk</a>
-                                    <a href="/features/config/client" class="dropdown-item has-text-black has-background-link">Clients</a>
-                                    <a href="/features/config/server" class="dropdown-item has-text-black has-background-link">Sicherheit</a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-
-
         <div th:if="${session.network ==null}" class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-danger is-rounded" data-open="#modal-login" href="#">
+                    <a class="button is-link is-rounded" data-open="#modal-login" href="#">
                 <span class="icon">
                  <i class="fas fa-wifi"></i>
                 </span><strong>Netzwerk anmelden</strong>
@@ -81,7 +45,7 @@
         <div th:if="${session.network !=null}" class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-danger is-rounded"  data-open="#modal-logout" href="#">
+                    <a class="button is-link is-rounded"  data-open="#modal-logout" href="#">
                 <span class="icon">
                  <i class="fas fa-sign-out-alt"></i>
                 </span><strong>Abmelden</strong>
