--- a/src/main/resources/templates/features/datastorage.html
+++ b/src/main/resources/templates/features/datastorage.html
@@ -18,8 +18,20 @@
 
 
 
-
-  <h1 class="title">Dateiverwaltung</h1>
+    <div class="level">
+    <div class="level-left">
+      <div class="level-item">
+        <div class="title">Dateiverwaltung</div>
+      </div>
+    </div>
+    <div class="level-right">
+      <div class="level-item">
+        <button type="button" class="button is-small">
+          <a th:text="${session.currentDate}"></a>
+        </button>
+      </div>
+    </div>
+  </div>
 
 
 
