--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,6 +14,15 @@
     <nav class="navbar is-primary py-3" role="navigation" aria-label="main navigation">
 
         <div class="navbar-start">
+            <!-- SVG eingefügt ganz links -->
+            <div class="navbar-brand">
+                <a class="navbar-item" href="/">
+
+                    <img src="https://img.icons8.com/color/48/raspberry-pi.png" alt="raspberry-pi" style="height: 100%; max-height: 3.75rem;" />
+
+                </a>
+            </div>
+
             <div th:if="${session.network != null}" class="navbar-item">
                 <div class="button has-background-white">
                     <a class="has-text-black" href="/">
@@ -22,6 +31,7 @@
                 </div>
             </div>
         </div>
+
 
         <div class="navbar-end">
             <div th:if="${session.network == null}" class="navbar-item">
